--- a/src/app/consulta-clientes/consulta-clientes.component.html
+++ b/src/app/consulta-clientes/consulta-clientes.component.html
@@ -8,29 +8,36 @@
 
         <div class="table-responsive">
 
-            <table class="table table-hover table-striped">
+            <table class="table table-hover table-striped table-sm">
 
                 <thead>
                     <tr>
                         <th>Nome do Cliente</th>
                         <th>Email</th>
                         <th>CPF</th>
+                        <th>Cadastrado em</th>
+                        <th>Modificado em</th>
                         <th>Operações</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                    <tr
+                        *ngFor="let item of clientes | paginate: { itemsPerPage: 10, currentPage: page, totalItems : clientes.length }">
+                        <td>{{item.nome | uppercase}}</td>
+                        <td>{{item.email | lowercase}}</td>
+                        <td>{{item.cpf}}</td>
+                        <td>{{item.dataCadastro | date : 'dd/MM/yyyy'}}</td>
+                        <td>{{item.dataUltimaAlteracao | date : 'dd/MM/yyyy'}}</td>
                         <td>
 
-                            <button class="btn btn-primary btn-sm mr-1" title="Atualizar">
+                            <button class="btn btn-primary btn-sm mr-1" data-target="#modal_edicao" data-toggle="modal"
+                                title="Atualizar">
                                 <i class="fa fa-pencil-alt"></i>
                             </button>
 
-                            <button class="btn btn-danger btn-sm mr-1" title="Excluir">
+                            <button class="btn btn-danger btn-sm mr-1" data-target="#modal_exclusao" data-toggle="modal"
+                                title="Excluir">
                                 <i class="fa fa-trash"></i>
                             </button>
 
@@ -40,15 +47,62 @@
 
                 <tfoot>
                     <tr>
-                        <td colspan="4">
-                            Quantidade de registros: 0
+                        <td colspan="6">
+                            Quantidade de registros: {{clientes.length}}
                         </td>
                     </tr>
                 </tfoot>
 
             </table>
 
+            <!-- régua de paginação -->
+            <pagination-controls (pageChange)="handlePageChange($event)" previousLabel="Anterior" nextLabel="Próximo"
+                responsive="true">
+            </pagination-controls>
+
         </div>
 
+    </div>
+</div>
+
+<!-- modal de edição -->
+<div id="modal_edicao" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-primary">
+                <h5 class="modal-title text-white">Atualizar Cliente</h5>
+                <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary">Salvar Alterações</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- modal de exclusão -->
+<div id="modal_exclusao" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-danger">
+                <h5 class="modal-title text-white">Excluir Cliente</h5>
+                <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger">Confirmar Exclusão</button>
+            </div>
+        </div>
     </div>
 </div>
